# youtube_summarizer

./: .gitignore  MIGRATION_NOTES.md  README.md  backend_cli.py  requirements.txt  run.bat  run.sh  translate_summary.py  youtube_summarizer.py
.github/workflows/: windows-installer.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tools/: autofill_translations.py  prepare_bundle.py
ui/: index.html  renderer.js
