[package]
name = "youtube-summarizer"
version = "1.0.0"
description = "A local-first desktop tool for summarizing YouTube videos"
authors = ["Victor Giers <mail@victorgiers.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
open = "5.3.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
